--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+# DB Config
 spring.datasource.url=jdbc:mysql://localhost:3306/microservice
 spring.datasource.username=appuser
 spring.datasource.password=secret
 
+#########################################################
+spring.application.name=address-app
+server.port=8081
+server.servlet.context-path=/address-app/api
