--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=secret
 spring.application.name=employee-app
 server.port=8080
 server.servlet.context-path=/employee-app/api
+
+address.base.url=http://localhost:8081/address-app/api
